--- a/css/custom.css
+++ b/css/custom.css
@@ -12,11 +12,11 @@ body{
   text-align: center;
 }
 
-.jumbotron{
-
+#jumbo {
+  height:200px;
 }
 
-.container{
+.container {
   margin-left: 220px;
   margin-right: 0px;
   padding-bottom: 25px;
@@ -25,13 +25,13 @@ body{
   border-right: 1px solid lightblue;
 }
 
-.sidebar{
+.sidebar {
   float: left;
   position: relative;
   align: top;
 }
 
-.jumbotron p{
+.jumbotron p {
   font-size: 14px;
   margin-bottom:2px;
   color: blue;
@@ -41,11 +41,11 @@ body{
   color:black;
 }
 
-.col{
+.col {
   padding: 1px;
 }
 
-.column1{
+.column1 {
   position: relative;
   background-color: #ccffcc;
   border: 1px solid lightgreen;
@@ -55,7 +55,7 @@ body{
 
 }
 
-.column2{
+.column2 {
   position: relative;
   background-color: #ccffff;
   border: 1px solid #99ccff;
@@ -76,10 +76,30 @@ body{
   background: #99ccff;
 }
 
+.column3  {
+  position: relative;
+  background-color: #e4d2ef;
+  border: 1px solid lightgreen;
+  margin: 15px;
+  text-align: center;
+}
+
+.column3 .subheader {
+  border: 1px solid green;
+  padding:1px;
+  background: #c29ed8;
+
+}
+
 .feature{
   float:left;
   max-width: 100px;
   max-height: 100px;
+}
+
+.feature2{
+  max-width: 300px;
+  max-height: 300px;
 }
 
 .colPicture{
