--- a/css/custom.css
+++ b/css/custom.css
@@ -91,6 +91,10 @@ body{
 
 }
 
+.column4 {
+  border-top: 1px solid lightblue;
+}
+
 .feature{
   float:left;
   max-width: 100px;
@@ -106,4 +110,8 @@ body{
   float:right;
   max-width: 100px;
   max-height: 100px;
+}
+
+#sister{
+  border-top: 1px solid lightblue;
 }
